# nidx

./: .gitignore  CMakeLists.txt  README.md  flake.nix
include/: JsonBuilder.hpp  JsonSerializer.hpp  int.h  nix_grammar.hpp
src/: nidx.cpp
